--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,10 +12,27 @@
             {{- if ne .Site.Params.footer.hugo false -}}
                 <div class="footer-line">
                     {{- $hugo := printf `<a href="https://gohugo.io/" target="_blank" rel="noopener noreferrer" title="Hugo %v">Hugo</a>` hugo.Version -}}
-                    {{- $theme := .Scratch.Get "version" | printf `<a href="https://github.com/sunt-programator/CodeIT" target="_blank" rel="noopener noreferrer" title="CodeIT %v"><i class="fas fa-laptop-code fa-fw"></i> CodeIT</a>` -}}
+                    {{- $theme := .Scratch.Get "version" | printf `<a href="https://github.com/xinyu-yang/EnjoyIt" target="_blank" rel="noopener noreferrer" title="CodeIT %v"><i class="fas fa-laptop-code fa-fw"></i> EnjoyIt</a>` -}}
                     {{- dict "Hugo" $hugo "Theme" $theme | T "poweredBySome" | safeHTML }}
                 </div>
             {{- end -}}
+
+
+        {{- /* busuanzi */ -}}
+        {{ if .Site.Params.footer.busuanzi.enable -}}
+            <div class="footer-line">
+                {{ $spinner := "img/spinner.svg" | relURL -}}
+                {{ if and .Site.Params.footer.busuanzi.enable .Site.Params.footer.busuanzi.sitePV -}}
+                {{ $valueSpan := printf `<span id="busuanzi_value_site_pv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
+                <span id="busuanzi_container_site_pv"> {{ printf (T "sitePV") $valueSpan | safeHTML }} </span>
+                {{ if .Site.Params.footer.busuanzi.siteUV }}<span class="division">|</span>{{ end }}
+                {{- end }}
+                {{ if and .Site.Params.footer.busuanzi.enable .Site.Params.footer.busuanzi.siteUV -}}
+                {{ $valueSpan := printf `<span id="busuanzi_value_site_uv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
+                <span id="busuanzi_container_site_uv"> {{ printf (T "siteUV") $valueSpan | safeHTML }} </span>
+                {{- end }}
+            </div>
+        {{- end }}
 
             <div class="footer-line">
                 {{- /* Copyright year */ -}}
