--- a/layouts/partials/head/link.html
+++ b/layouts/partials/head/link.html
@@ -30,7 +30,7 @@
 {{- end -}}
 
 <!-- busuanzi -->
-{{- if .Site.Params.footer.busuanzi.enable -}}
+{{- if .Site.Params.busuanzi.enable -}}
   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 {{- end -}}
 
