--- a/layouts/partials/plugin/analytics.html
+++ b/layouts/partials/plugin/analytics.html
@@ -10,6 +10,20 @@
         {{- printf "https://www.googletagmanager.com/gtag/js?id=%v" . | dict "Async" true "Source" | partial "plugin/script.html" -}}
     {{- end -}}
 
+    {{- /*Baidu Analytics */ -}}
+    {{- with $analytics.baidu.id -}}
+    <script id="baidu_analytics" type="text/javascript">
+      var _hmt = _hmt || [];
+      (function() {
+        if (window.location.hostname === 'localhost') return;
+        var hm = document.createElement("script"); hm.async = true;
+        hm.src = "https://hm.baidu.com/hm.js?{{.}}";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    {{- end }}
+
     {{- /* Fathom Analytics */ -}}
     {{- with $analytics.fathom.id -}}
         <script type="text/javascript">
