--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,11 +8,11 @@
                 </div>
             {{- end -}}
 
-            {{- /* Hugo and CodeIT */ -}}
+            {{- /* Hugo and EnjoyIt */ -}}
             {{- if ne .Site.Params.footer.hugo false -}}
                 <div class="footer-line">
                     {{- $hugo := printf `<a href="https://gohugo.io/" target="_blank" rel="noopener noreferrer" title="Hugo %v">Hugo</a>` hugo.Version -}}
-                    {{- $theme := .Scratch.Get "version" | printf `<a href="https://github.com/xinyu-yang/EnjoyIt" target="_blank" rel="noopener noreferrer" title="CodeIT %v"><i class="fas fa-laptop-code fa-fw"></i> EnjoyIt</a>` -}}
+                    {{- $theme := .Scratch.Get "version" | printf `<a href="https://github.com/xinyu-yang/EnjoyIt" target="_blank" rel="noopener noreferrer" title="EnjoyIt %v"><i class="fas fa-laptop-code fa-fw"></i> EnjoyIt</a>` -}}
                     {{- dict "Hugo" $hugo "Theme" $theme | T "poweredBySome" | safeHTML }}
                 </div>
             {{- end -}}
