--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -58,7 +58,7 @@
                 {{- /* busuanzi */ -}}
                 {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.pagePV -}}
                   {{ $valueSpan := printf `<span id="busuanzi_value_page_pv"><img src="%s" alt="spinner.svg"/></span>` ("img/spinner.svg" | relURL) -}}
-                  <i class="fas fa-globe fa-fw"></i>&nbsp;
+                  <i class="fas fa-eye fa-fw"></i>&nbsp;
                   <span id="busuanzi_container_page_pv" class="more-meta"> {{ printf (T "pagePV") $valueSpan | safeHTML }} </span>&nbsp;
 
                 {{- end }}
