--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,35 +8,33 @@
                 </div>
             {{- end -}}
 
-            {{- /* Hugo and EnjoyIt */ -}}
-            {{- if ne .Site.Params.footer.hugo false -}}
+            {{- /* busuanzi */ -}}
+            {{ if .Site.Params.busuanzi.enable -}}
                 <div class="footer-line">
+                    {{ $spinner := "img/spinner.svg" | relURL -}}
+                    {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.sitePV -}}
+                    {{ $valueSpan := printf `<span id="busuanzi_value_site_pv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
+                    <span id="busuanzi_container_site_pv"> {{ printf (T "sitePV") $valueSpan | safeHTML }} </span>
+                    {{ if .Site.Params.busuanzi.siteUV }}<span class="division">•</span>{{ end }}
+                    {{- end }}
+                    {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.siteUV -}}
+                    {{ $valueSpan := printf `<span id="busuanzi_value_site_uv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
+                    <span id="busuanzi_container_site_uv"> {{ printf (T "siteUV") $valueSpan | safeHTML }} </span>
+                    {{- end }}
+                </div>
+            {{- end }}
+
+            <div class="footer-line">
+                {{- /* Hugo and EnjoyIt */ -}}
+                {{- if ne .Site.Params.footer.hugo false -}}
                     {{- $hugo := printf `<a href="https://gohugo.io/" target="_blank" rel="noopener noreferrer" title="Hugo %v">Hugo</a>` hugo.Version -}}
                     {{- $theme := .Scratch.Get "version" | printf `<a href="https://github.com/xinyu-yang/EnjoyIt" target="_blank" rel="noopener noreferrer" title="EnjoyIt %v"><i class="fas fa-heart fa-fw"></i> EnjoyIt</a>` -}}
                     {{- dict "Hugo" $hugo "Theme" $theme | T "poweredBySome" | safeHTML }}
-                </div>
-            {{- end -}}
+                {{- end -}}
 
-
-        {{- /* busuanzi */ -}}
-        {{ if .Site.Params.busuanzi.enable -}}
-            <div class="footer-line">
-                {{ $spinner := "img/spinner.svg" | relURL -}}
-                {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.sitePV -}}
-                {{ $valueSpan := printf `<span id="busuanzi_value_site_pv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
-                <span id="busuanzi_container_site_pv"> {{ printf (T "sitePV") $valueSpan | safeHTML }} </span>
-                {{ if .Site.Params.busuanzi.siteUV }}<span class="division">•</span>{{ end }}
-                {{- end }}
-                {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.siteUV -}}
-                {{ $valueSpan := printf `<span id="busuanzi_value_site_uv"><img src="%s" alt="spinner.svg"/></span>` $spinner -}}
-                <span id="busuanzi_container_site_uv"> {{ printf (T "siteUV") $valueSpan | safeHTML }} </span>
-                {{- end }}
-            </div>
-        {{- end }}
-
-            <div class="footer-line">
                 {{- /* Copyright year */ -}}
                 {{- if ne .Site.Params.footer.copyright false -}}
+                    <span class="division"> • </span>
                     <i class="far fa-copyright fa-fw"></i>
                     {{- with .Site.Params.footer.since -}}
                         <span itemprop="copyrightYear">
@@ -54,7 +52,7 @@
 
                 {{- /* License */ -}}
                 {{- with .Site.Params.footer.license -}}
-                    &nbsp;|&nbsp;<span class="license">{{ . | safeHTML }}</span>
+                    &nbsp;•&nbsp;<span class="license">{{ . | safeHTML }}</span>
                 {{- end -}}
 
                 {{- /* ICP */ -}}
