--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -4,7 +4,7 @@
 
 // ========== Global ========== //
 //// Font and Line Height
-$global-font-family: system-ui, -apple-system, BlinkMacSystemFont, PingFang SC,
+$global-font-family: Trebuchet MS, system-ui, -apple-system, BlinkMacSystemFont, PingFang SC,
   Microsoft YaHei UI, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
   Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !default;
 $global-font-size: 16px;
