--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -7,6 +7,7 @@ code {
   font-size: $code-font-size;
   font-family: $code-font-family;
   color: $code-color;
+  border-radius: 6px;
 
   [theme="dark"] & {
     color: $code-color-dark;
