--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -56,11 +56,13 @@
                 <i class="far fa-clock fa-fw"></i>&nbsp;{{ T "readingTime" .ReadingTime }}&nbsp;
 
                 {{- /* busuanzi */ -}}
-                {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.pagePV -}}
-                  {{ $valueSpan := printf `<span id="busuanzi_value_page_pv"><img src="%s" alt="spinner.svg"/></span>` ("img/spinner.svg" | relURL) -}}
-                  <i class="fas fa-eye fa-fw"></i>&nbsp;
-                  <span id="busuanzi_container_page_pv" class="more-meta"> {{ printf (T "pagePV") $valueSpan | safeHTML }} </span>&nbsp;
-
+                {{- $analytics := .Scratch.Get "analytics" | default dict -}}
+                {{- if $analytics.enable -}}
+                    {{ if and .Site.Params.busuanzi.enable .Site.Params.busuanzi.pagePV -}}
+                        {{ $valueSpan := printf `<span id="busuanzi_value_page_pv"><img src="%s" alt="spinner.svg"/></span>` ("img/spinner.svg" | relURL) -}}
+                        <i class="fas fa-eye fa-fw"></i>&nbsp;
+                        <span id="busuanzi_container_page_pv" class="more-meta"> {{ printf (T "pagePV") $valueSpan | safeHTML }} </span>&nbsp;
+                    {{- end }}
                 {{- end }}
 
                 {{- $comment := .Scratch.Get "comment" | default dict -}}
