update background color

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -12,7 +12,7 @@ $global-font-weight: 400;
 $global-line-height: 1.8rem;
 
 // Color of the background
-$global-background-color: #f5f5dc !default;
+$global-background-color: #fefefe !default;
 $global-background-color-dark: #292a2d !default;
 
 // Color of the text
@@ -55,7 +55,7 @@ $selection-color-dark: rgba(50, 112, 194, 0.4) !default;
 $header-height: 3.5rem !default;
 
 // Color of the header background
-$header-background-color: #FFF8DC !default;
+$header-background-color: #efefef !default;
 $header-background-color-dark: #252627 !default;
 
 // Font style of the header title
